<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:textAlignment="center"
    tools:context=".Add_Loan">

    <ImageView
        android:id="@+id/imageView7"
        android:layout_width="414dp"
        android:layout_height="183dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/dark_blue_header" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="182dp"
        android:layout_height="65dp"
        android:text="@string/page_name"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textSize="34sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/imageView7"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/imageView7"
        app:layout_constraintVertical_bias="0.123" />

    <View
        android:id="@+id/view7"
        android:layout_width="354dp"
        android:layout_height="527dp"
        android:background="@drawable/custom_view"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.51"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView7"
        app:layout_constraintVertical_bias="0.067" />

    <TextView
        android:id="@+id/textView21"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:text="Add a Loan"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textSize="@dimen/CRUD_topic"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/view7"
        app:layout_constraintStart_toStartOf="@+id/view7"
        app:layout_constraintTop_toTopOf="@+id/view7" />

    <EditText
        android:id="@+id/loanName"
        android:layout_width="@dimen/Input_box_width"
        android:layout_height="@dimen/Input_box_height"
        android:layout_marginTop="20dp"
        android:background="@drawable/crud_input"
        android:ems="10"
        android:hint="@string/loan_name"
        android:inputType="textPersonName"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="@+id/view7"
        app:layout_constraintStart_toStartOf="@+id/view7"
        app:layout_constraintTop_toBottomOf="@+id/textView21" />


    <EditText
        android:id="@+id/loanAmount"
        android:layout_width="@dimen/Input_box_width"
        android:layout_height="@dimen/Input_box_height"
        android:layout_marginTop="16dp"
        android:background="@drawable/crud_input"
        android:ems="10"
        android:hint="@string/loan_amount"
        android:inputType="number"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="@+id/view7"
        app:layout_constraintStart_toStartOf="@+id/view7"
        app:layout_constraintTop_toBottomOf="@+id/loanName" />

    <EditText
        android:id="@+id/loanDate"
        android:layout_width="@dimen/Input_box_width"
        android:layout_height="@dimen/Input_box_height"
        android:layout_marginTop="16dp"
        android:background="@drawable/crud_input"
        android:ems="10"
        android:hint="@string/loan_borrowed_date"
        android:inputType="date"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="@+id/view7"
        app:layout_constraintStart_toStartOf="@+id/view7"
        app:layout_constraintTop_toBottomOf="@+id/loanAmount" />

    <EditText
        android:id="@+id/loanSettle"
        android:layout_width="@dimen/Input_box_width"
        android:layout_height="@dimen/Input_box_height"
        android:layout_marginTop="16dp"
        android:background="@drawable/crud_input"
        android:ems="10"
        android:hint="@string/dates_to_be_settled"
        android:inputType="date"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="@+id/view7"
        app:layout_constraintStart_toStartOf="@+id/view7"
        app:layout_constraintTop_toBottomOf="@+id/loanDate" />

    <Button
        android:id="@+id/button6"
        android:layout_width="@dimen/CRUD_BTN_width"
        android:layout_height="@dimen/CRUD_BTN_height"
        android:layout_marginStart="28dp"
        android:background="@drawable/crud_button"
        android:text="@string/crud_add"
        android:textAlignment="center"
        android:textColor="#020202"
        android:textSize="@dimen/CRUB_BTN_textsize"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/view7"
        app:layout_constraintStart_toStartOf="@+id/view7"
        app:layout_constraintTop_toBottomOf="@+id/loanSettle"
        app:layout_constraintVertical_bias="0.826" />

    <Button
        android:id="@+id/cancleBTN"
        android:layout_width="@dimen/CRUD_BTN_width"
        android:layout_height="@dimen/CRUD_BTN_height"
        android:layout_marginEnd="28dp"
        android:background="@drawable/crud_button"
        android:text="@string/crud_cancle"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textSize="@dimen/CRUB_BTN_textsize"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/view7"
        app:layout_constraintEnd_toEndOf="@+id/view7"
        app:layout_constraintTop_toBottomOf="@+id/loanSettle"
        app:layout_constraintVertical_bias="0.824" />

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar2"
        android:layout_width="@dimen/Toolbar_width"
        android:layout_height="@dimen/Toolbar_height"
        android:background="@color/gray_view"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageButton
        android:id="@+id/home_btn"
        android:layout_width="@dimen/Footer_icon_width"
        android:layout_height="@dimen/Footer_icon_height"
        android:layout_marginStart="25dp"
        android:contentDescription="@string/home_btn"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/toolbar2"
        app:srcCompat="@drawable/home" />

    <ImageButton
        android:id="@+id/transaction_btn_nav"
        android:layout_width="@dimen/Footer_icon_width"
        android:layout_height="@dimen/Footer_icon_height"
        android:layout_marginStart="25dp"
        android:contentDescription="@string/transaction_btn"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/home_btn"
        app:layout_constraintTop_toTopOf="@+id/toolbar2"
        app:srcCompat="@drawable/transaction" />

    <ImageButton
        android:id="@+id/target_btn_transaction"
        android:layout_width="@dimen/Footer_icon_width"
        android:layout_height="@dimen/Footer_icon_height"
        android:layout_marginStart="25dp"
        android:contentDescription="@string/target_btn"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/transaction_btn_nav"
        app:layout_constraintTop_toTopOf="@+id/toolbar2"
        app:srcCompat="@drawable/target" />

    <ImageButton
        android:id="@+id/bill_btn"
        android:layout_width="@dimen/Footer_icon_width"
        android:layout_height="@dimen/Footer_icon_height"
        android:layout_marginStart="25dp"
        android:contentDescription="@string/bill_btn"
        app:layout_constraintStart_toEndOf="@+id/target_btn_transaction"
        app:layout_constraintTop_toTopOf="@+id/toolbar2"
        app:srcCompat="@drawable/bill" />


    <RadioGroup
        android:id="@+id/linearLayout"
        android:layout_width="185dp"
        android:layout_height="86dp"
        android:layout_marginTop="12dp"
        app:layout_constraintEnd_toEndOf="@+id/view7"
        app:layout_constraintStart_toStartOf="@+id/view7"
        app:layout_constraintTop_toBottomOf="@+id/loanSettle">

        <RadioButton
            android:id="@+id/radioButton2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:minHeight="48dp"
            android:text="@string/check_box_borrowed"
            android:textAlignment="center"
            android:textColor="#020202"
            android:textSize="16sp" />

        <RadioButton
            android:id="@+id/radioButton3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:minHeight="48dp"
            android:text="@string/Check_box_lent"
            android:textAlignment="center"
            android:textColor="#020202"
            android:textSize="16sp" />


    </RadioGroup>

    <ImageButton
        android:id="@+id/imageButton42"
        android:layout_width="@dimen/User_icon_width"
        android:layout_height="@dimen/User_icon_height"
        android:layout_marginTop="16dp"
        android:backgroundTint="#003086"
        android:contentDescription="@string/select_date"
        app:layout_constraintBottom_toBottomOf="@+id/textView"
        app:layout_constraintEnd_toStartOf="@+id/textView"
        app:layout_constraintHorizontal_bias="0.062"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0"
        app:srcCompat="@drawable/baseline_account_circl24" />

    <ImageButton
        android:id="@+id/pickerDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:backgroundTint="#FEFEFE"
        android:contentDescription="@string/select_date"
        app:layout_constraintBottom_toBottomOf="@+id/loanDate"
        app:layout_constraintStart_toStartOf="@+id/loanDate"
        app:layout_constraintTop_toTopOf="@+id/loanDate"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/baseline_calendar_month_24"
        tools:ignore="TouchTargetSizeCheck" />

    <ImageButton
        android:id="@+id/pickerDate1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:backgroundTint="#FEFEFE"
        android:contentDescription="@string/select_date"
        app:layout_constraintBottom_toBottomOf="@+id/loanSettle"
        app:layout_constraintStart_toStartOf="@+id/loanSettle"
        app:layout_constraintTop_toTopOf="@+id/loanSettle"
        app:layout_constraintVertical_bias="1.0"
        app:srcCompat="@drawable/baseline_calendar_month_24"
        tools:ignore="TouchTargetSizeCheck" />

    <ImageButton
        android:id="@+id/loanBtn"
        android:layout_width="@dimen/Footer_icon_width"
        android:layout_height="@dimen/Footer_icon_height"
        android:layout_marginStart="25dp"
        android:contentDescription="@string/home_btn"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/bill_btn"
        app:layout_constraintTop_toTopOf="@+id/toolbar2"
        app:srcCompat="@drawable/loan1" />
    <CalendarView
        android:id="@+id/calendarView"
        android:visibility="gone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:ignore="MissingConstraints" />


</androidx.constraintlayout.widget.ConstraintLayout>