<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Update_loan">


    <ImageView
        android:id="@+id/imageView7"
        android:layout_width="414dp"
        android:layout_height="183dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/dark_blue_header" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="65dp"
        android:layout_marginEnd="160dp"
        android:text="@string/page_name"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textSize="34sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/imageView7"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/imageView7"
        app:layout_constraintVertical_bias="0.135" />

    <View
        android:id="@+id/view7"
        android:layout_width="365dp"
        android:layout_height="528dp"
        android:background="@drawable/custom_view"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView7"
        app:layout_constraintVertical_bias="0.052" />

    <TextView
        android:id="@+id/textView21"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:text="Update Loan"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textSize="@dimen/CRUD_topic"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/view7"
        app:layout_constraintStart_toStartOf="@+id/view7"
        app:layout_constraintTop_toTopOf="@+id/view7" />

    <EditText
        android:id="@+id/loanName"
        android:layout_width="@dimen/Input_box_width"
        android:layout_height="@dimen/Input_box_height"
        android:layout_marginTop="32dp"
        android:background="@drawable/crud_input"
        android:ems="10"
        android:text="Ravindu"
        android:inputType="textPersonName"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="@+id/view7"
        app:layout_constraintStart_toStartOf="@+id/view7"
        app:layout_constraintTop_toBottomOf="@+id/textView21" />

    <EditText
        android:id="@+id/loanAmount"
        android:layout_width="@dimen/Input_box_width"
        android:layout_height="@dimen/Input_box_height"
        android:layout_marginTop="24dp"
        android:background="@drawable/crud_input"
        android:ems="10"
        android:hint="8000.00"
        android:inputType="number"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="@+id/view7"
        app:layout_constraintStart_toStartOf="@+id/view7"
        app:layout_constraintTop_toBottomOf="@+id/loanName" />

    <EditText
        android:id="@+id/loanDate"
        android:layout_width="@dimen/Input_box_width"
        android:layout_height="@dimen/Input_box_height"
        android:layout_marginTop="24dp"
        android:background="@drawable/crud_input"
        android:ems="10"
        android:text="23/3/2023"
        android:inputType="date"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="@+id/view7"
        app:layout_constraintHorizontal_bias="0.477"
        app:layout_constraintStart_toStartOf="@+id/view7"
        app:layout_constraintTop_toBottomOf="@+id/loanAmount" />


    <EditText
        android:id="@+id/loanSettle"
        android:layout_width="@dimen/Input_box_width"
        android:layout_height="@dimen/Input_box_height"
        android:layout_marginTop="24dp"
        android:background="@drawable/crud_input"
        android:ems="10"
        android:inputType="date|textPersonName"
        android:text="28/08/2023"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="@+id/view7"
        app:layout_constraintHorizontal_bias="0.511"
        app:layout_constraintStart_toStartOf="@+id/view7"
        app:layout_constraintTop_toBottomOf="@+id/loanDate" />

    <Button
        android:id="@+id/AddLoan"
        android:layout_width="@dimen/CRUD_BTN_width"
        android:layout_height="@dimen/CRUD_BTN_height"
        android:layout_marginStart="28dp"
        android:background="@drawable/crud_button"
        android:text="@string/update_btn"
        android:textAlignment="center"
        android:textColor="#020202"
        android:textSize="@dimen/CRUB_BTN_textsize"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/view7"
        app:layout_constraintStart_toStartOf="@+id/view7"
        app:layout_constraintTop_toBottomOf="@+id/loanSettle"
        app:layout_constraintVertical_bias="0.82" />

    <Button
        android:id="@+id/cancleBTN"
        android:layout_width="@dimen/CRUD_BTN_width"
        android:layout_height="@dimen/CRUD_BTN_height"
        android:layout_marginEnd="28dp"
        android:background="@drawable/crud_button"
        android:text="@string/update_cancle"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textSize="@dimen/CRUB_BTN_textsize"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/view7"
        app:layout_constraintEnd_toEndOf="@+id/view7"
        app:layout_constraintTop_toBottomOf="@+id/loanSettle"
        app:layout_constraintVertical_bias="0.824" />

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="310dp"
        android:layout_height="67dp"
        android:layout_marginTop="12dp"
        app:layout_constraintEnd_toEndOf="@+id/view7"
        app:layout_constraintStart_toStartOf="@+id/view7"
        app:layout_constraintTop_toBottomOf="@+id/loanSettle">

        <RadioButton
            android:id="@+id/radioButton3"
            android:layout_width="@dimen/CheckBox_width"
            android:layout_height="@dimen/CheckBox_height"
            android:checked="true"
            android:text="Borrowed"
            android:textAlignment="center"
            android:textColor="#050505"
            android:textSize="16sp" />

        <RadioButton
            android:id="@+id/radioButton5"
            android:layout_width="@dimen/CheckBox_width"
            android:layout_height="@dimen/CheckBox_height"
            android:layout_weight="1"
            android:text="Lent"
            android:textAlignment="center"
            android:textColor="#020202"
            android:textSize="16sp" />

    </LinearLayout>

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar2"
        android:layout_width="@dimen/Toolbar_width"
        android:layout_height="@dimen/Toolbar_height"
        android:background="@color/gray_view"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageButton
        android:id="@+id/home_btn"
        android:layout_width="@dimen/Footer_icon_width"
        android:layout_height="@dimen/Footer_icon_height"
        android:layout_marginStart="25dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/toolbar2"
        app:srcCompat="@drawable/home"
        tools:ignore="SpeakableTextPresentCheck" />

    <ImageButton
        android:id="@+id/transaction_btn_nav"
        android:layout_width="@dimen/Footer_icon_width"
        android:layout_height="@dimen/Footer_icon_height"
        android:layout_marginStart="25dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/home_btn"
        app:layout_constraintTop_toTopOf="@+id/toolbar2"
        app:srcCompat="@drawable/transaction"
        tools:ignore="SpeakableTextPresentCheck" />

    <ImageButton
        android:id="@+id/target_btn_transaction"
        android:layout_width="@dimen/Footer_icon_width"
        android:layout_height="@dimen/Footer_icon_height"
        android:layout_marginStart="25dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/transaction_btn_nav"
        app:layout_constraintTop_toTopOf="@+id/toolbar2"
        app:srcCompat="@drawable/target"
        tools:ignore="SpeakableTextPresentCheck" />

    <ImageButton
        android:id="@+id/bill_btn"
        android:layout_width="@dimen/Footer_icon_width"
        android:layout_height="@dimen/Footer_icon_height"
        android:layout_marginStart="25dp"
        app:layout_constraintStart_toEndOf="@+id/target_btn_transaction"
        app:layout_constraintTop_toTopOf="@+id/toolbar2"
        app:srcCompat="@drawable/bill"
        tools:ignore="SpeakableTextPresentCheck" />

    <ImageButton
        android:id="@+id/loan_Btn"
        android:layout_width="@dimen/Footer_icon_width"
        android:layout_height="@dimen/Footer_icon_height"
        android:layout_marginStart="25dp"
        app:layout_constraintBottom_toBottomOf="@+id/toolbar2"
        app:layout_constraintStart_toEndOf="@+id/bill_btn"
        app:layout_constraintTop_toTopOf="@+id/toolbar2"
        app:srcCompat="@drawable/loan1" />

    <ImageButton
        android:id="@+id/imageButton52"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:backgroundTint="#FEFEFE"
        app:layout_constraintBottom_toBottomOf="@+id/loanDate"
        app:layout_constraintStart_toStartOf="@+id/loanDate"
        app:layout_constraintTop_toTopOf="@+id/loanDate"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/baseline_calendar_month_24" />

    <ImageButton
        android:id="@+id/imageButton53"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:backgroundTint="#FEFEFE"
        app:layout_constraintBottom_toBottomOf="@+id/loanSettle"
        app:layout_constraintStart_toStartOf="@+id/loanSettle"
        app:layout_constraintTop_toTopOf="@+id/loanSettle"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/baseline_calendar_month_24" />

    <ImageButton
        android:id="@+id/imageButton61"
        android:layout_width="@dimen/User_icon_width"
        android:layout_height="@dimen/User_icon_height"
        android:backgroundTint="#003086"
        app:layout_constraintBottom_toBottomOf="@+id/textView"
        app:layout_constraintEnd_toStartOf="@+id/textView"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/baseline_account_circl24" />


</androidx.constraintlayout.widget.ConstraintLayout>